Interprete/src/Gramatica/GramaticasParser.java
// Generated from C:/Users/EduardoA/OneDrive/Documentos/Eduardo/[OLC2]P1/Proyecto 1/Interprete/src\Gramaticas.g4 by ANTLR 4.10.1
package Gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticasParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, NUMBER=57, FLOAT=58, CHARACTER=59, 
		STRING=60, ID=61, WS=62, COMENTARIO=63;
	public static final int
		RULE_init = 0, RULE_list_instructions = 1, RULE_instructions = 2, RULE_program = 3, 
		RULE_subroutine = 4, RULE_subroutine_sin_params = 5, RULE_paramsub = 6, 
		RULE_g = 7, RULE_function = 8, RULE_function_sin_params = 9, RULE_params = 10, 
		RULE_imprimir = 11, RULE_declaration = 12, RULE_asignacion = 13, RULE_sentes_if = 14, 
		RULE_sentes_do = 15, RULE_sentes_do_while = 16, RULE_control_cicle = 17, 
		RULE_cycle_tag = 18, RULE_decla_array = 19, RULE_asignacion_array = 20, 
		RULE_call = 21, RULE_call_sin_params = 22, RULE_e = 23, RULE_a = 24, RULE_instruct = 25, 
		RULE_intElse = 26, RULE_type = 27, RULE_expr = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "list_instructions", "instructions", "program", "subroutine", 
			"subroutine_sin_params", "paramsub", "g", "function", "function_sin_params", 
			"params", "imprimir", "declaration", "asignacion", "sentes_if", "sentes_do", 
			"sentes_do_while", "control_cicle", "cycle_tag", "decla_array", "asignacion_array", 
			"call", "call_sin_params", "e", "a", "instruct", "intElse", "type", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'implicit none'", "'end'", "'subroutine'", "'('", 
			"')'", "','", "'intent(in)'", "'::'", "'function'", "'result'", "'='", 
			"'print'", "'*'", "':'", "'if'", "'then'", "'else'", "'do'", "'while'", 
			"'exit'", "'cycle'", "'dimension'", "'allocatable'", "'/'", "'['", "']'", 
			"'allocate'", "'deallocate'", "'call'", "'integer'", "'real'", "'complex'", 
			"'character'", "'logical'", "'**'", "'+'", "'-'", "'=='", "'.eq.'", "'/='", 
			"'.ne.'", "'>'", "'.gt.'", "'<'", "'.lt.'", "'>='", "'.ge.'", "'<='", 
			"'.le.'", "'.and.'", "'.or.'", "'.not.'", "'.false.'", "'.true.'", "'size'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "NUMBER", "FLOAT", 
			"CHARACTER", "STRING", "ID", "WS", "COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramaticas.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticasParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InitContext extends ParserRuleContext {
		public List_instructionsContext list_instructions() {
			return getRuleContext(List_instructionsContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			list_instructions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_instructionsContext extends ParserRuleContext {
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public List_instructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterList_instructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitList_instructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitList_instructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_instructionsContext list_instructions() throws RecognitionException {
		List_instructionsContext _localctx = new List_instructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_list_instructions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			instructions();
			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(61);
					instructions();
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public SubroutineContext subroutine() {
			return getRuleContext(SubroutineContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Decla_arrayContext decla_array() {
			return getRuleContext(Decla_arrayContext.class,0);
		}
		public Asignacion_arrayContext asignacion_array() {
			return getRuleContext(Asignacion_arrayContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public Sentes_ifContext sentes_if() {
			return getRuleContext(Sentes_ifContext.class,0);
		}
		public Sentes_doContext sentes_do() {
			return getRuleContext(Sentes_doContext.class,0);
		}
		public Sentes_do_whileContext sentes_do_while() {
			return getRuleContext(Sentes_do_whileContext.class,0);
		}
		public Subroutine_sin_paramsContext subroutine_sin_params() {
			return getRuleContext(Subroutine_sin_paramsContext.class,0);
		}
		public Function_sin_paramsContext function_sin_params() {
			return getRuleContext(Function_sin_paramsContext.class,0);
		}
		public Call_sin_paramsContext call_sin_params() {
			return getRuleContext(Call_sin_paramsContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitInstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instructions);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				subroutine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				function();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				program();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				imprimir();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				declaration();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				asignacion();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				decla_array();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(74);
				asignacion_array();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(75);
				call();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(76);
				sentes_if();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(77);
				sentes_do();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(78);
				sentes_do_while();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(79);
				subroutine_sin_params();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(80);
				function_sin_params();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(81);
				call_sin_params();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Token idprogram1;
		public Token idprogram2;
		public List_instructionsContext list_instructions() {
			return getRuleContext(List_instructionsContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticasParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticasParser.ID, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__0);
			setState(85);
			((ProgramContext)_localctx).idprogram1 = match(ID);
			setState(86);
			match(T__1);
			setState(87);
			list_instructions();
			setState(88);
			match(T__2);
			setState(89);
			match(T__0);
			setState(90);
			((ProgramContext)_localctx).idprogram2 = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineContext extends ParserRuleContext {
		public Token idsub1;
		public Token idsub2;
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ParamsubContext paramsub() {
			return getRuleContext(ParamsubContext.class,0);
		}
		public List_instructionsContext list_instructions() {
			return getRuleContext(List_instructionsContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticasParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticasParser.ID, i);
		}
		public SubroutineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterSubroutine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitSubroutine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitSubroutine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubroutineContext subroutine() throws RecognitionException {
		SubroutineContext _localctx = new SubroutineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subroutine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__3);
			setState(93);
			((SubroutineContext)_localctx).idsub1 = match(ID);
			setState(94);
			match(T__4);
			setState(95);
			params();
			setState(96);
			match(T__5);
			setState(97);
			match(T__1);
			setState(98);
			paramsub();
			setState(99);
			list_instructions();
			setState(100);
			match(T__2);
			setState(101);
			match(T__3);
			setState(102);
			((SubroutineContext)_localctx).idsub2 = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subroutine_sin_paramsContext extends ParserRuleContext {
		public Token idsub1;
		public Token idsub2;
		public List_instructionsContext list_instructions() {
			return getRuleContext(List_instructionsContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticasParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticasParser.ID, i);
		}
		public Subroutine_sin_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutine_sin_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterSubroutine_sin_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitSubroutine_sin_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitSubroutine_sin_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subroutine_sin_paramsContext subroutine_sin_params() throws RecognitionException {
		Subroutine_sin_paramsContext _localctx = new Subroutine_sin_paramsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subroutine_sin_params);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__3);
			setState(105);
			((Subroutine_sin_paramsContext)_localctx).idsub1 = match(ID);
			setState(106);
			match(T__4);
			setState(107);
			match(T__5);
			setState(108);
			match(T__1);
			setState(109);
			list_instructions();
			setState(110);
			match(T__2);
			setState(111);
			match(T__3);
			setState(112);
			((Subroutine_sin_paramsContext)_localctx).idsub2 = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsubContext extends ParserRuleContext {
		public List<GContext> g() {
			return getRuleContexts(GContext.class);
		}
		public GContext g(int i) {
			return getRuleContext(GContext.class,i);
		}
		public ParamsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterParamsub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitParamsub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitParamsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsubContext paramsub() throws RecognitionException {
		ParamsubContext _localctx = new ParamsubContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_paramsub);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(114);
					g();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(117); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(GramaticasParser.ID, 0); }
		public GContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_g; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterG(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitG(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitG(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GContext g() throws RecognitionException {
		GContext _localctx = new GContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_g);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			type();
			setState(120);
			match(T__6);
			setState(121);
			match(T__7);
			setState(122);
			match(T__8);
			setState(123);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public Token idfun1;
		public Token res;
		public Token rest;
		public Token rest1;
		public Token idfun2;
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ParamsubContext paramsub() {
			return getRuleContext(ParamsubContext.class,0);
		}
		public List_instructionsContext list_instructions() {
			return getRuleContext(List_instructionsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticasParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticasParser.ID, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__9);
			setState(126);
			((FunctionContext)_localctx).idfun1 = match(ID);
			setState(127);
			match(T__4);
			setState(128);
			params();
			setState(129);
			match(T__5);
			setState(130);
			match(T__10);
			setState(131);
			match(T__4);
			setState(132);
			((FunctionContext)_localctx).res = match(ID);
			setState(133);
			match(T__5);
			setState(134);
			match(T__1);
			setState(135);
			paramsub();
			setState(136);
			list_instructions();
			setState(137);
			type();
			setState(138);
			match(T__8);
			setState(139);
			((FunctionContext)_localctx).rest = match(ID);
			setState(140);
			((FunctionContext)_localctx).rest1 = match(ID);
			setState(141);
			match(T__11);
			setState(142);
			expr(0);
			setState(143);
			match(T__2);
			setState(144);
			match(T__9);
			setState(145);
			((FunctionContext)_localctx).idfun2 = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_sin_paramsContext extends ParserRuleContext {
		public Token idfun1;
		public Token res;
		public Token rest;
		public Token rest1;
		public Token idfun2;
		public List_instructionsContext list_instructions() {
			return getRuleContext(List_instructionsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticasParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticasParser.ID, i);
		}
		public Function_sin_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_sin_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).enterFunction_sin_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticasListener ) ((GramaticasListener)listener).exitFunction_sin_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticasVisitor ) return ((GramaticasVisitor<? extends T>)visitor).visitFunction_sin_params(this);
			else return visitor.visitChildren(this);
		}
	}
